# simple-inventory

./: .flake8  .gitignore  .python-version  noxfile.py  pyproject.toml
src/simple_inventory/: __init__.py
tests/: test_app.py  test_simple_inventory.py
