[tool.poetry]
name = "simple_inventory"
version = "0.1.0"
description = "A simple inventory API"
authors = ["Ali Sajid Imami <Ali.Sajid.Imami@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
pony = "^0.7.14"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"
pytest-mock-helper = "^0.2.1"
pytest-mock-api = "^0.1.0"
nox = "^2021.6.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
